--- a/style/fonts.css
+++ b/style/fonts.css
@@ -1,8 +1,8 @@
 @font-face{
-    font-family: "Sergio Trendy";
-    src: url("/assets/fonts/sergio-trendy-webfont.woff");
+    font-family: "brl-font";
+    src: url("assets/fonts/brl-font.woff2");
     font-style: normal;
     font-weight: 100;
-
-
 }
+
+
